[package]
name = "recorder"
version = "0.1.0"
edition = "2021"
description = "DASH Media Stream Record Tool"

[dependencies]
common = { path = "../common" }
serde = { version = "1", features = ["derive", "rc"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
toml = "0.8"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_with = "3.12.0"
