[package]
name = "replayer"
version = "0.1.0"
edition = "2021"
description = "DASH Media Stream Replay Tool"

[dependencies]
common = { path = "../common" }
serde = { version = "1", features = ["derive", "rc"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
hyper-util = { version = "0.1", features = ["full"] }
toml = "0.8"
serde_json = "1"
tracing = "0.1"
tracing-subscriber 	= { version = "0.3", features = ["fmt", "env-filter"] }
serde_with = "3.12.0"
humantime-serde = "1.1"
bytes = "1"
http-body-util = "0.1.3"
tokio-stream = "0.1.17"
